org.ekstep.questionunit.mcq-1.3/renderer/styles/style.css
/* ... */
.mcq2-2-option8 {
    margin-left: 10.575%;
    margin-top: 1.95%;
}

.mcq2-2-option {
    height: 41.411%;
    width: 40%;
    margin-top: 3%;
    margin-bottom: 3%;
    float: left;
    position: relative;
    border-radius: 4px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: white;
}

.mcq2-2-check-image-holder {
    top: 77.21%;
    margin-left: 79.73%;
    height: 13.234%;
    width: 13.033%;
    position: relative;
}

.mcq2-2-option .mcq2-2-check-image {
    width: 3.5vw;
    position: absolute;
    visibility: hidden;
}

.mcq2-2-option.opt-selected .mcq2-2-check-image {
    width: 3.5vw;
    position: absolute;
    visibility: visible;
}

.mcq2-2-option-image {
    margin-top: 0%;
    max-height: 100%;
    max-width: 100%;
    position: absolute;
    overflow: hidden;
    object-fit: contain;
}
.mcq2-2-option-grid-image {
    margin-top: 26%;
    max-height: 100%;
    max-width: 90%;
    margin-top: 0%
}

.mcq2-2-option-text {
    padding-top: 2%;
    padding:0% 2%;
    margin-top: 0%;
    height: 100%;
    width: 100%;
    position: absolute;
    object-fit: contain;
    overflow: hidden;
    font-size: 14px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.1em;
    font-weight: bold;
}

.mcq2-2-option-text>p{ 
    white-space: nowrap; 
    overflow: hidden;
    text-overflow: ellipsis;
}

.mcq2-2-option-text-text-only {
    padding-top: 2%;
    padding:0% 2%;
    margin-top: 0%;
    height: 100%;
    width: 100%;
    position: absolute;
    object-fit: contain;
    overflow: hidden;
    font-size: 14px;
    background: white; 
}

.mcq-qLeft-question-container .q-image {
    max-height: 100%;
    max-width: 100%;
    position: relative;
    object-fit: contain;
    overflow: hidden;
    margin-top: 10%;
}

.mcq-qLeft-question-container .zoom-image {
    width: 21%;
    position: absolute;
    bottom: 0px;
    cursor: pointer;
    top: 62%;
    left: 75%;
}

.mcq-qLeft-question-container .audio-image {
    height: 17%;
    width: 21%;
    left: 41.61%;
    top: -1%;
    position: absolute;
    object-fit: contain;
}

.mcq-2-options-container {
    margin-left: 46.063%;
    height: 100%;
    width: 54.731%;
}
.mcq-2-options-outer-container-vertical {
    height: 100%;
    position: relative;
    overflow: auto;
}

.mcq-2-options-container-vertical {
    height: 100%;
    width: 100%;
    position: relative;
    display: table;
}
.mcq-2-options-container-vertical .mcq-2-options-block-container-vertical{
    justify-content: center;
    display: table-cell;
    align-items: center;
    vertical-align: middle;
}

.left2::-webkit-scrollbar {
    width: 0.5em;
}
.left2::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}
.left2::-webkit-scrollbar-thumb {
    background-color: #65A0E6;
    outline: 1px solid slategrey;
    border: 0.3em;
    height: 75%;
    width: 75%;
}

.mcq-2-options-outer-container-vertical::-webkit-scrollbar {
    width: 0.5em;
}
.mcq-2-options-outer-container-vertical::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}
.mcq-2-options-outer-container-vertical::-webkit-scrollbar-thumb {
    background-color: #65A0E6;
    outline: 1px solid slategrey;
    border: 0.3em;
    height: 75%;
    width: 75%;
}
.mcq-2-options-container-vertical .outer-option-block {
    margin: 3%;
}
.mcq-2-options-container-vertical .text-option {
    cursor: pointer;
    height: 15vh;
    width: 100%;
    border-radius: 4px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
    background: #ffffff;
    overflow: hidden;
    margin-bottom: 2vh;
    display: table;
}

.mcq-2-options-container-vertical .text-option.opt-selected {
    cursor: pointer;
    height: 15vh;
    width: 100%;
    border-radius: 4px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
    background: #8EEBFE;
    overflow: hidden;
    margin-bottom: 2vh;
    display: table;
}

.mcq-2-options-container-vertical .text-option-1 {
    margin-top: 0%;
}

.mcq-2-options-container-vertical .text-option-2 {
    margin-top: 2.797%;
}

.mcq-2-options-container-vertical .text-option-3 {
    margin-top: 2.797%;
}

.mcq-2-options-container-vertical .text-option-4 {
    margin-top: 2.797%;
}

.mcq-2-options-container-vertical .text-content {
    width: 90.29%;
    height: 67.15%;
    padding-top:0.5vw;
    position: relative;
    font-size: 14px;
    display: table-cell;
    vertical-align: middle;
    padding-left: 3vw;
    padding-bottom: 0.5vw;
}

.mcq-2-options-container-vertical .text-content>span>p {
    margin: 0 19% 0 1px;
}

.mcq-2-options-container-vertical .text-content-outer {
    height: 100%;
    display: table;
}

.mcq-2-options-container-vertical .text-content-inner {
    display: table-cell;
    vertical-align: middle;
}
.mcq-2-options-container-vertical .text-content>span {
    height: auto;
    position: relative;
    top: 0;
    bottom: 0;
    display: block;
    align-items: center;
    vertical-align: middle;
}

.mcq-2-options-container-vertical .audio-option-image {
    height: 100%;
}

.mcq-2-options-container-vertical .audio-option-image-container {
    width: 6vw;
    height: 10vh;
    display: table-cell;
    top: 13.5vh;
    vertical-align: middle;
    position: relative;
    z-index: 2;
    left: 36vw;
}

.mcq-2-options-container-vertical .tick-icon-holder {
    position: relative;
    height: 8vh;
    display: table-cell;
    vertical-align: middle;
    top:1.5vh;
}

.text-option .tick-icon-holder>img {
    visibility: hidden;
}

.text-option.opt-selected .tick-icon-holder>img {
    visibility: visible;
}

.vertical-center {
    margin: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }

  .mcq-qLeft-question-container .vertical-center {
    height: 25.98%;
    width: 100%;
    background: #ffffff;
    float: left;
    overflow: hidden;
}
/* ... */

